--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost/ostech?createDatabaseIfNotExist=true&useSSL=false&useTimeZone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=agbdlcid
